examples/errors/function_type.aaa
fn foo {
    5
}


fn
    main
{
    nop
}
